Ajout du header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <img class="logo" src="images/logo/Booki@3x.png" alt="Logo Booki">
+            <nav>
+                <li class="li-hebergements">Hébergements</li>
+                <li class="li-activites">Activités</li>
+            </nav>
+        </header>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
