--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
         <!-- Main -->
         <main>
-            <div class="titre-formulaire-de-recherche">
+            <!-- Formulaire de recherche -->
+            <div class="formulaire-de-recherche">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre-ville ou en pleine nature</p>
                     <form action="" method="post">
@@ -36,6 +37,17 @@
                         <input type="text" name="ville" id="ville" placeholder="Marseille, France">
                         <input type="submit" value="Rechercher"></a>
                     </form>
+            </div>
+            <!-- Filtres -->
+            <div class="filtres">
+                <p>Filtres</p>
+                    <li><i class="fa-solid fa-money-bill-wave"></i>Économique</li>
+                    <li><i class="fa-solid fa-person"></i>Familial</li>
+                    <li><i class="fa-solid fa-heart"></i>Romantique</li>
+                    <li><i class="fa-solid fa-fire"></i>Nos pépites</li>                
+            </div>
+            <div class="info">
+                <i class="fa-solid fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
