Ajout du Footer

--- a/index.html
+++ b/index.html
@@ -275,9 +275,29 @@
                         </article>
                     </a>
                 </div>
-        </section>  
+        </section>
+        
         <!-- Footer -->
-        <footer></footer>
+        <footer>
+            <ul>
+                <div>
+                    <h4>À propos</h4>
+                        <a href="#"><li>Fonctionnement du site</li></a>
+                        <a href="#"><li>Conditions générales</li></a>
+                        <a href="#"><li>Données et confidentialité</li></a>
+                </div>
+                <div>
+                    <h4>Nos hébergements</h4>
+                        <a href="#"><li>Charte qualité</li></a>
+                        <a href="#"><li>Proposer votre hôtel</li></a>
+                </div>
+                <div>
+                    <h4>Assistance</h4>
+                        <a href="#"><li>Centre d'aide</li></a>
+                        <a href="#"><li>Nous contacter</li></a>
+                </div>
+            </ul>
+        </footer>
     </div>
 </body>
 
