--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
             <!-- Filtres -->
             <div class="filtres">
                 <p>Filtres</p>
+                <div class="filtres-list">
                     <li><i class="fa-solid fa-money-bill-wave"></i>Économique</li>
                     <li><i class="fa-solid fa-person"></i>Familial</li>
                     <li><i class="fa-solid fa-heart"></i>Romantique</li>
-                    <li><i class="fa-solid fa-fire"></i>Nos pépites</li>                
+                    <li><i class="fa-solid fa-fire"></i>Nos pépites</li>      
+                </div>          
             </div>
             <div class="info">
                 <i class="fa-solid fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p>
